Criado o service controller e repository do comments, videos e category.